--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,11 @@
             <version>1.7.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.1.2.Final</version>
+        </dependency>
 
     </dependencies>
     
